<resources>
    <string name="empty" />
    <string name="app_name">BetterTello</string>
    <string name="slow_letter">S</string>
    <string name="fast_letter">F</string>
    <string name="exposure">Exposure</string>
    <string name="exposure_auto">AUTO</string>
    <string name="bitrate">Bitrate</string>
    <string name="bitrate_auto">AUTO</string>
    <string name="bitrate_1">1MBPS</string>
    <string name="bitrate_1_5">1.5MBPS</string>
    <string name="bitrate_2">2MBPS</string>
    <string name="bitrate_3">3MBPS</string>
    <string name="bitrate_4">4MBPS</string>
    <string name="iframe_interval">IFrame interval (seconds)</string>
    <string name="pic_quality">Picture quality</string>
    <string name="pic_quality_low">LOW</string>
    <string name="pic_quality_high">HIGH</string>
    <string name="photo_download_percentage">%1$d%%</string>
    <string name="battery_percentage">%1$d%%</string>
    <string name="speed">%1$d m/s</string>
    <string name="height">%1$d m</string>
    <string name="controller_connected">Controller %1$s was connected</string>
    <string name="controller_disconnected">Controller %1$s was disconnected</string>
    <string name="state_ready_to_fly">Ready to fly</string>
    <string name="state_flying">In flight</string>
    <string name="state_not_connected">Waiting for connection…</string>
    <string name="state_lost_connection">Connection lost</string>
    <string name="state_low_battery">Low battery level</string>
    <string name="state_critical_battery">Critical battery level</string>
    <string name="state_battery_error">Battery error</string>
    <string name="state_camera_error">Camera sensor error</string>
    <string name="state_downward_vision_error">Downward Vision Sensor Error</string>
    <string name="state_gravity_error">Gravity Error</string>
    <string name="state_imu_error">Flight Controller sensor error</string>
    <string name="state_overheat">Drone is overheating</string>
    <string name="state_too_windy">Too windy</string>
    <string name="state_weak_wifi_signal">Weak wifi signal</string>
    <string name="state_strong_wifi_interference">Strong wifi interference</string>
    <string name="state_low_light">Low light level</string>
    <string name="flight_modes">FLIGHT MODES</string>
    <string name="flight_modes_original">Original flight modes</string>
    <string name="flight_modes_autopilot">Autopilot</string>
    <string name="flight_modes_ai">Control modes &amp; AI</string>
    <string name="flight_mode_up_and_away">Up &amp; Away</string>
    <string name="flight_mode_up_and_away_description">Record a short video while flying upward and backward.</string>
    <string name="flight_mode_circle">Circle</string>
    <string name="flight_mode_circle_description">Record a short video while flying in a circle.</string>
    <string name="flight_mode_360">360</string>
    <string name="flight_mode_360_description">Record a short video while spinning 360 in place.</string>
    <string name="flight_mode_bounce">Bounce</string>
    <string name="flight_mode_bounce_description">Automatically fly up and down within 0.5 and 1.2 meters of a flat surface below the aircraft.</string>
    <string name="flight_mode_8D_flips">8D flips</string>
    <string name="flight_mode_8D_flips_description">Slide on screen to flip in eight different directions.</string>
    <string name="flight_mode_smart_dronie">Smart Dronie</string>
    <string name="flight_mode_smart_dronie_description">Works like the original Up &amp; Away, but you can adjust all the flight parameters.</string>
    <string name="flight_mode_smart_circle">Smart Circle</string>
    <string name="flight_mode_smart_circle_description">Works like the original Circle, but you can adjust all the flight parameters.</string>
    <string name="flight_mode_smart_360_video">Smart 360 video</string>
    <string name="flight_mode_smart_360_video_description">Works like the original 360, but you can adjust all the flight parameters.</string>
    <string name="flight_mode_360_panorama">360 panorama</string>
    <string name="flight_mode_360_panorama_description">Shot multiple photos on all the sides to crete 360 panorama.</string>
    <string name="flight_mode_helix">Helix</string>
    <string name="flight_mode_helix_description">Connects Smart dronie and Smart circle features.</string>
    <string name="flight_mode_boomerang">Boomerang</string>
    <string name="flight_mode_boomerang_description">Record a video while flying in an oval boomerang-like shape.</string>
    <string name="flight_mode_rocket">Rocket</string>
    <string name="flight_mode_rocket_description">Record a video while flying up.</string>
    <string name="flight_mode_hand_control">Hand control</string>
    <string name="flight_mode_hand_control_description">Control drone by moving your hand.</string>
    <string name="flight_mode_vr_head_control">VR &amp; Head control</string>
    <string name="flight_mode_vr_head_control_description">Use VR googles to view live footage from a drone and use your head to control it.</string>
    <string name="flight_mode_face_tracking">Face tracking</string>
    <string name="flight_mode_face_tracking_description">Detect and track closest face.</string>
    <string name="flight_mode_object_tracking">Object tracking</string>
    <string name="flight_mode_object_tracking_description">Select and track any object.</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_general">General</string>
    <string name="settings_photo_video">Camera</string>
    <string name="settings_drone">Drone</string>
    <string name="settings_drone_low_battery_threshold">Low battery threshold</string>
    <string name="settings_drone_attitude_limit">Attitude limit</string>
    <string name="settings_drone_height_limit">Height limit</string>
    <string name="settings_drone_wifi_ssid">WiFi SSID</string>
    <string name="settings_drone_wifi_password">WiFi password</string>
    <string name="settings_controller_empty">No saved controllers</string>
    <string name="settings_controller">Controller</string>
    <string name="settings_controller_mapping">Mapping</string>
    <string name="settings_controller_xbox">Xbox controller</string>
    <string name="settings_controller_yaw">Yaw</string>
    <string name="settings_controller_throttle">Throttle</string>
    <string name="settings_controller_roll">Roll</string>
    <string name="settings_controller_pitch">Pitch</string>
    <string name="settings_controller_takeoff_land">Takeoff / Land</string>
    <string name="settings_controller_throw_takeoff_hand_land">Hand takeoff/land</string>
    <string name="settings_controller_start_motors">Start motors</string>
    <string name="settings_controller_change_speed">Change speed</string>
    <string name="settings_controller_change_photo_video">Change photo/video</string>
    <string name="settings_controller_take_photo">Take photo</string>
    <string name="settings_controller_increase_exposure">Increase exposure</string>
    <string name="settings_controller_decrease_exposure">Decrease exposure</string>
    <string name="settings_controller_increase_bitrate">Increase bitrate</string>
    <string name="settings_controller_decrease_bitrate">Decrease bitrate</string>
    <string name="settings_controller_stop_all">Stop</string>
    <string name="settings_controller_mode_up_and_away">Up &amp; Away</string>
    <string name="settings_controller_mode_circle">Circle</string>
    <string name="settings_controller_mode_video_360">360 video</string>
    <string name="settings_controller_mode_bounce">Bounce mode</string>
    <string name="settings_controller_mode_8d_flips">8D Flips mode</string>
    <string name="settings_controller_flip_forward">Flip FWD</string>
    <string name="settings_controller_flip_forward_left">Flip FWD-L</string>
    <string name="settings_controller_flip_forward_right">Flip FWD-R</string>
    <string name="settings_controller_flip_left">Flip L</string>
    <string name="settings_controller_flip_right">Flip R</string>
    <string name="settings_controller_flip_backward">Flip BW</string>
    <string name="settings_controller_flip_backward_left">Flip BW-L</string>
    <string name="settings_controller_flip_backward_right">Flip BW-R</string>
    <string name="home_home">Home</string>
    <string name="home_sensors">Sensor info</string>
    <string name="home_battery">Battery info</string>
    <string name="home_motors">Motor info</string>
    <string name="home_vgps">vGPS position</string>
    <string name="home_info">Device info</string>
    <string name="title_activity_programming">ProgrammingActivity</string>
</resources>