<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="600dp"
    android:layout_height="200dp"
    android:weightSum="3"
    tools:context=".VideoSettingsWindow">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/videoSettingsBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/video_settings_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </eightbitlab.com.blurview.BlurView>

    <TextView
        android:id="@+id/exposureText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/exposure"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/bitrateText"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/exposureValue"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/exposureValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/exposure_auto"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/bitrateText"
        app:layout_constraintEnd_toStartOf="@id/exposureBar"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/exposureText"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/exposureBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:maxHeight="40dp"
        android:layout_marginEnd="20dp"
        android:max="18"
        android:progress="9"
        android:progressDrawable="@drawable/seek_bar_progress_split"
        android:splitTrack="false"
        android:thumb="@drawable/seek_bar_thumb"
        app:layout_constraintBottom_toTopOf="@id/bitrateText"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintLeft_toRightOf="@+id/exposureValue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/bitrateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/bitrate"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/qualityText"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bitrateValue"
        app:layout_constraintTop_toBottomOf="@id/exposureText" />


    <TextView
        android:id="@+id/bitrateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/bitrate_auto"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/qualityText"
        app:layout_constraintEnd_toStartOf="@id/bitrateBar"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/bitrateText"
        app:layout_constraintTop_toBottomOf="@id/exposureText" />

    <SeekBar
        android:id="@+id/bitrateBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="15dp"
        android:maxHeight="15dp"
        android:layout_marginEnd="20dp"
        android:max="5"
        android:progress="0"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:splitTrack="false"
        android:thumb="@drawable/seek_bar_thumb"
        app:layout_constraintBottom_toTopOf="@id/qualityText"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintLeft_toRightOf="@+id/bitrateValue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exposureText" />

    <TextView
        android:id="@+id/qualityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/pic_quality"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/qualityValue"
        app:layout_constraintTop_toBottomOf="@id/bitrateText" />


    <TextView
        android:id="@+id/qualityValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/pic_quality_low"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/qualitySwitch"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/qualityText"
        app:layout_constraintTop_toBottomOf="@id/bitrateText" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/qualitySwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:minHeight="48dp"
        app:track="@drawable/white_blue_track"
        android:thumb="@drawable/white_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/qualityValue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bitrateText"
        />


</androidx.constraintlayout.widget.ConstraintLayout>